--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "dependencies": {
     "expo": "~46.0.9",
@@ -18,8 +20,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@react-native-community/eslint-config": "^3.1.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "eslint": "^8.23.1",
+    "prettier": "^2.7.1",
     "typescript": "~4.3.5"
   },
   "private": true
