--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -11,11 +11,17 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-paper": "5.0.0-rc.5",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
