--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -23,6 +23,7 @@
     "react-native-paper": "5.0.0-rc.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-ui-lib": "^6.21.2",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
