--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -20,6 +20,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-flatlist-slider": "^1.0.6",
     "react-native-paper": "5.0.0-rc.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
