--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -17,6 +17,7 @@
     "expo": "~46.0.9",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "lottie-react-native": "5.1.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
