--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
