XP #3: update .gitignore file & disable code coverage

--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -53,7 +53,7 @@
       "js",
       "jsx"
     ],
-    "collectCoverage": true,
+    "collectCoverage": false,
     "collectCoverageFrom": [
       "**/*.{js,jsx}",
       "!**/coverage/**",
