--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -15,8 +15,6 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
-    "@types/jest": "^29.2.1",
-    "@types/react-test-renderer": "^18.0.0",
     "expo": "~46.0.9",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -25,6 +23,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "5.0.0-rc.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
@@ -36,8 +35,10 @@
     "@react-native-community/eslint-config": "^3.1.0",
     "@testing-library/jest-native": "^5.1.2",
     "@testing-library/react-native": "^11.3.0",
+    "@types/jest": "^29.2.1",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.23.1",
     "prettier": "^2.7.1",
     "typescript": "~4.3.5"
@@ -55,7 +56,7 @@
     ],
     "collectCoverage": false,
     "collectCoverageFrom": [
-      "**/*.{js,jsx}",
+      "**/*.{ts,tsx}",
       "!**/coverage/**",
       "!**/node_modules/**",
       "!**/babel.config.js",
