--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -27,6 +27,7 @@
     "react-native-paper": "5.0.0-rc.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-segmented-control-tab": "^4.0.0",
     "react-native-web": "~0.18.7",
     "react-test-renderer": "18.0.0"
   },
