--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -12,6 +12,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@babel/runtime": "^7.20.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
@@ -28,9 +29,10 @@
     "react-native-paper": "5.0.0-rc.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-segmented-control-tab": "^4.0.0",
+    "react-native-ui-lib": "^6.21.2",
     "react-native-web": "~0.18.7",
-    "react-test-renderer": "18.0.0",
-    "react-native-ui-lib": "^6.21.2"
+    "react-test-renderer": "18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -46,6 +48,7 @@
     "typescript": "~4.3.5"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
