--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -31,6 +31,7 @@
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-ui-lib": "^6.21.2",
     "react-native-web": "~0.18.7",
+    "react-router-native": "^6.4.3",
     "react-test-renderer": "18.0.0"
   },
   "devDependencies": {
