--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-segmented-control-tab": "^4.0.0",
+    "react-native-testing-library": "^6.0.0",
     "react-native-ui-lib": "^6.21.2",
     "react-native-web": "~0.18.7",
     "react-test-renderer": "18.0.0"
