XP #122: created avatar list subcomponent from project card. Added prop to Avatar component allowing for a border to be displayed depending on whether or not its included in a list (this is not ideal, hopefully a better solution can be found as overriding Avatars default styles caused lots of issues)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@babel/runtime": "^7.20.1",
+    "react-native-reanimated": "^2.13.0",
     "react-native-segmented-control-tab": "^4.0.0"
   }
 }
