--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "appwrite": "^10.1.0",
     "expo": "~46.0.9",
+    "expo-secure-store": "^12.0.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "jest": "^26.6.3",
