--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-inset-shadow": "^1.0.3",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "5.0.0-rc.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
