[Improve]: Hide away credentials in .env file - setup for TS

--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@types/react-native-dotenv": "^0.2.0",
     "appwrite": "^10.1.0",
     "expo": "~46.0.9",
     "expo-splash-screen": "~0.16.2",
@@ -27,6 +28,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-dotenv": "^3.4.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
