--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.4.0",
     "jest": "^26.6.3",
     "jest-expo": "^46.0.1",
+    "lodash": "^4.17.21",
     "lottie-react-native": "5.1.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -29,11 +30,12 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-paper": "5.0.0-rc.5",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-testing-library": "^6.0.0",
-    "react-native-ui-lib": "^6.21.2",
+    "react-native-ui-lib": "^6.28.2",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.4.3",
     "react-test-renderer": "18.0.0",
@@ -45,6 +47,7 @@
     "@testing-library/jest-native": "^5.1.2",
     "@testing-library/react-native": "^11.3.0",
     "@types/jest": "^29.2.2",
+    "@types/lodash": "^4.14.191",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/react-test-renderer": "^18.0.0",
