--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-paper": "5.0.0-rc.5",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-segmented-control-tab": "^4.0.0",
