--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -37,6 +37,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.1.3",
     "react-native-paper-dates": "^0.11.14",
     "react-native-reanimated": "~2.9.1",
