--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
+    "expo-community-flipper": "^47.0.0",
+    "expo-dev-client": "~1.3.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "jest": "^26.6.3",
@@ -26,6 +28,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-flipper": "^0.177.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-paper": "5.0.0-rc.5",
