--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -28,6 +28,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-dotenv": "^3.4.7",
     "react-native-flipper": "^0.177.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-inset-shadow": "^1.0.3",
