#1 Verification of email using deep links

--- a/Xplore/app.json
+++ b/Xplore/app.json
@@ -4,6 +4,7 @@
     "slug": "Xplore",
     "version": "1.0.0",
     "orientation": "portrait",
+    "scheme": "xplorify",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
