--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -23,7 +23,7 @@
     "expo": "~46.0.9",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
-    "jest": "^26.6.3",
+    "jest": "^29.4.1",
     "jest-expo": "^46.0.1",
     "lottie-react-native": "5.1.3",
     "react": "18.0.0",
@@ -56,11 +56,12 @@
     "@types/react-native": "~0.69.1",
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.23.1",
+    "jest-environment-jsdom": "^29.4.1",
     "prettier": "^2.7.1",
     "typescript": "~4.3.5"
   },
   "jest": {
-    "testEnvironment": "jsdom",
+    "testEnvironment": "node",
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.|@expo-google-fonts/.|react-navigation|@react-navigation/.|@unimodules/.|unimodules|sentry-expo|native-base|react-native-svg|@rneui)"
