--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@shopify/flash-list": "1.1.0",
     "@types/react-native-dotenv": "^0.2.0",
     "appwrite": "^10.1.0",
     "expo": "~46.0.9",
