XP : #122 added scaling functionality to AvatarGroup component

--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.1",
+    "@expo/webpack-config": "^0.17.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
