--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -29,6 +29,7 @@
     "jest": "^26.6.3",
     "jest-expo": "^46.0.1",
     "lottie-react-native": "5.1.3",
+    "moment": "^2.29.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
