--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -20,6 +20,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "@shopify/flash-list": "1.1.0",
+    "@types/luxon": "^3.2.0",
     "@types/react-native-dotenv": "^0.2.0",
     "appwrite": "^10.1.0",
     "expo": "~46.0.9",
@@ -29,6 +30,7 @@
     "jest": "^26.6.3",
     "jest-expo": "^46.0.1",
     "lottie-react-native": "5.1.3",
+    "luxon": "^3.3.0",
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
