--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -16,6 +16,7 @@
     "@babel/runtime": "^7.20.1",
     "@expo/ngrok": "^4.1.0",
     "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
