XP #428: Removed comments and logs from the code

--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.1",
-    "@expo/ngrok": "^4.1.0",
+    "@expo/ngrok": "4.1.0",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
