--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -15,42 +15,42 @@
   "dependencies": {
     "@babel/runtime": "^7.20.1",
     "@expo/ngrok": "4.1.0",
-    "@react-native-community/datetimepicker": "6.2.0",
-    "@react-native-picker/picker": "2.4.2",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "@shopify/flash-list": "1.1.0",
+    "@shopify/flash-list": "1.4.0",
     "@types/luxon": "^3.2.0",
     "@types/react-native-dotenv": "^0.2.0",
     "appwrite": "^10.1.0",
     "expo": "^48.0.9",
-    "expo-image-picker": "~13.3.1",
-    "expo-linking": "~3.2.4",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "jest": "^26.6.3",
+    "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "jest": "^29.2.1",
     "jest-expo": "^46.0.1",
     "lodash": "^4.17.21",
-    "lottie-react-native": "5.1.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "lottie-react-native": "5.1.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.4",
     "react-native-calendars": "^1.1293.0",
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^3.4.8",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.1.3",
     "react-native-paper-dates": "^0.11.14",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-testing-library": "^6.0.0",
     "react-native-ui-lib": "^6.28.2",
@@ -67,12 +67,12 @@
     "@testing-library/react-native": "^11.3.0",
     "@types/jest": "^29.2.2",
     "@types/lodash": "^4.14.191",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.69.1",
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.23.1",
     "prettier": "^2.7.1",
-    "typescript": "~4.3.5"
+    "typescript": "^4.9.4"
   },
   "jest": {
     "testEnvironment": "jsdom",
