--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -32,6 +32,7 @@
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-expo": "^46.0.1",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.1.4",
@@ -75,7 +76,7 @@
     "typescript": "^4.9.4"
   },
   "jest": {
-    "testEnvironment": "jsdom",
+    "testEnvironment": "node",
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@rneui/.*)"
