--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -31,14 +31,13 @@
     "expo-linking": "~4.0.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
-    "jest": "^29.2.1",
-    "jest-environment-jsdom": "^29.5.0",
+    "jest": "^26.6.3",
     "jest-expo": "^46.0.1",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.1.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-calendars": "^1.1293.0",
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
@@ -68,7 +67,7 @@
     "@testing-library/react-native": "^11.3.0",
     "@types/jest": "^29.2.2",
     "@types/lodash": "^4.14.191",
-    "@types/react": "~18.0.27",
+    "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.23.1",
@@ -76,7 +75,7 @@
     "typescript": "^4.9.4"
   },
   "jest": {
-    "testEnvironment": "node",
+    "testEnvironment": "jsdom",
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@rneui/.*)"
