#377 Added tests to bring coverage to 60%

--- a/Xplore/package.json
+++ b/Xplore/package.json
@@ -96,7 +96,9 @@
       "!**/index.ts",
       "!**/constants/**",
       "!**/Xplore/databaseManagementTools/**",
-      "!**/services/**"
+      "!**/services/**",
+      "!**/utils/**",
+      "!**/navigation/**"
     ]
   },
   "private": true
